# the-gift-firmware

./: .gitattributes  .gitignore  Cargo.toml  README.md  openocd.cfg  openocd.gdb  sipeed-jtag.cfg  tools.7z
.cargo/: config.toml
src/: main.rs
src/ec01f/: coap.rs  mod.rs
src/epd2in66b/: command.rs  mod.rs
src/panic_blinky/: mod.rs
