[package]
edition = "2021"
name = "the-gift"
version = "0.1.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
embedded-graphics = "0.7.1"
embedded-hal = "0.2.6"
embedded-sdmmc = {version = "0.3.0", optional = true}
gd32vf103xx-hal = "0.5.0"
longan-nano = "0.3.0"
panic-halt = "0.2.0"
riscv = "0.6.0"
riscv-rt = "0.8.0"

# edge-executor = {version = "0.1.1", features = []}
palloc = "0.1.3"

[profile.release]
debug = true

[features]
sdcard = ["embedded-sdmmc"]
