[package]
edition = "2021"
name = "the-gift"
version = "0.1.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
embedded-graphics = "0.7.1"
embedded-hal = "0.2.6"
embedded-sdmmc = {version = "0.3.0", optional = true}
gd32vf103xx-hal = "0.5.0"
heapless = "0.7"
longan-nano = "0.3.0"
nb = "1.0.0"
nom = {version = "7", default-features = false}
riscv = "0.6.0"
riscv-rt = "0.8.0"

[profile.release]
debug = true

[features]
sdcard = ["embedded-sdmmc"]
