[package]
edition = "2021"
name = "the-gift"
version = "0.1.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
critical-section = {version = "1.1", features = ["restore-state-bool"]}
embassy-executor = {git = "https://github.com/embassy-rs/embassy", features = ["nightly"]}
embedded-graphics = "0.7.1"
embedded-hal = "0.2.6"
gd32vf103xx-hal = "0.5.0"
heapless = "0.7"
longan-nano = "0.3.0"
nb = "1.0.0"
nom = {version = "7", default-features = false}
riscv = "0.8"
riscv-rt = {git = "https://github.com/rust-embedded/riscv-rt"}

[profile.release]
debug = true
